--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,28 +9,33 @@ set (APP_VERSION_MINOR 0)
 set (EXECNAME imgui_vtk)
 
 
-find_package(VTK COMPONENTS 
-  vtkCommonColor
-  vtkCommonCore
-  vtkCommonDataModel
-  vtkFiltersCore
-  vtkInteractionStyle
-  vtkRenderingCore
-  vtkRenderingFreeType
-  vtkRenderingGL2PSOpenGL2
-  vtkRenderingOpenGL2
+find_package(ParaView
   QUIET
 )
-
-if (NOT VTK_FOUND)
-  message("Skipping ImageDataToQImage: ${VTK_NOT_FOUND_MESSAGE}")
-  return ()
+if (NOT ParaView_FOUND)
+  find_package(VTK COMPONENTS 
+    CommonCore
+    CommonColor
+    CommonDataModel
+    FiltersCore
+    InteractionStyle
+    RenderingCore
+    RenderingFreeType
+    RenderingGL2PSOpenGL2
+    RenderingOpenGL2
+    QUIET
+  )
+  if (NOT VTK_FOUND)
+    message("Skipping imgui-vtk: ${VTK_NOT_FOUND_MESSAGE}")
+    return ()
+  endif()
 endif()
+
 message (STATUS "VTK_VERSION: ${VTK_VERSION}")
 
 # glfw
 list (APPEND CMAKE_MODULE_PATH "${${PROJECT_NAME}_SOURCE_DIR}")
-find_package(GLFW3 REQUIRED)
+find_package(glfw3 REQUIRED)
 include_directories(${GLFW3_INCLUDE_DIR})
 link_libraries(${GLFW_LIBRARY_DIRS})
 
@@ -63,6 +68,8 @@ target_include_directories (${EXECNAME}
     imgui
 )
 
+target_compile_definitions(${EXECNAME} PRIVATE "IMGUI_IMPL_OPENGL_LOADER_GLAD")
+
 if (UNIX)
   if (APPLE)
       target_link_libraries (
@@ -71,6 +78,7 @@ if (UNIX)
               "-framework IOKit"
               "-framework CoreVideo"
               glfw
+              OpenGL::GL
               ${VTK_LIBRARIES}
       )
   else ()
@@ -80,6 +88,7 @@ if (UNIX)
               ${X11_LIBRARIES}
               ${CMAKE_DL_LIBS}
               glfw
+              OpenGL::GL
               ${VTK_LIBRARIES}
       )
   endif()
